[gd_scene load_steps=2 format=3 uid="uid://dhj8pkao61c1l"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_eutyp"]

[node name="menu" type="Node2D"]
script = ExtResource("1_eutyp")

[node name="score" type="RichTextLabel" parent="."]
offset_left = -456.0
offset_top = -304.0
offset_right = -232.0
offset_bottom = -240.0

[node name="mole" type="Button" parent="."]
offset_left = -264.0
offset_top = -295.0
offset_bottom = -258.0
text = "Whack-A-Mole"

[node name="golf" type="Button" parent="."]
offset_top = -295.0
offset_right = 264.0
offset_bottom = -258.0
text = "golf"

[node name="job" type="Button" parent="."]
offset_top = -251.0
offset_right = 264.0
offset_bottom = -214.0
text = "job"

[node name="fastFood" type="Button" parent="."]
offset_top = -208.0
offset_right = 264.0
offset_bottom = -171.0
text = "Fast Food"

[node name="wake" type="Button" parent="."]
offset_top = -163.0
offset_right = 264.0
offset_bottom = -126.0
text = "Wake"

[node name="laundry" type="Button" parent="."]
offset_left = -264.0
offset_top = -251.0
offset_bottom = -214.0
text = "Laundry"

[node name="urinal" type="Button" parent="."]
offset_left = -264.0
offset_top = -208.0
offset_bottom = -171.0
text = "Urinal"

[node name="scare" type="Button" parent="."]
offset_left = -264.0
offset_top = -163.0
offset_bottom = -126.0
text = "Scare"

[node name="align" type="Button" parent="."]
offset_left = -264.0
offset_top = -122.0
offset_bottom = -85.0
text = "Align"

[node name="channel" type="Button" parent="."]
offset_left = -264.0
offset_top = -75.0
offset_bottom = -38.0
text = "Change Channel"

[node name="subway" type="Button" parent="."]
offset_left = -264.0
offset_top = -33.0
offset_bottom = 4.0
text = "Subway"

[node name="crash" type="Button" parent="."]
offset_left = -264.0
offset_top = 8.0
offset_bottom = 45.0
text = "Crash"

[node name="smile" type="Button" parent="."]
offset_left = -264.0
offset_top = 53.0
offset_bottom = 90.0
text = "Smile"

[node name="randomGames" type="Button" parent="."]
offset_left = -264.0
offset_top = 93.0
offset_right = 264.0
offset_bottom = 130.0
text = "Play Random Games
"

[node name="storyButt" type="Button" parent="."]
offset_left = -264.0
offset_top = 133.0
offset_right = 264.0
offset_bottom = 170.0
text = "Story Menu
"

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -82)
zoom = Vector2(2, 2)

[connection signal="pressed" from="mole" to="." method="_on_mole_pressed"]
[connection signal="pressed" from="golf" to="." method="_on_golf_pressed"]
[connection signal="pressed" from="job" to="." method="_on_job_pressed"]
[connection signal="pressed" from="fastFood" to="." method="_on_fast_food_pressed"]
[connection signal="pressed" from="wake" to="." method="_on_wake_pressed"]
[connection signal="pressed" from="laundry" to="." method="_on_laundry_pressed"]
[connection signal="pressed" from="urinal" to="." method="_on_urinal_pressed"]
[connection signal="pressed" from="scare" to="." method="_on_scare_pressed"]
[connection signal="pressed" from="align" to="." method="_on_align_pressed"]
[connection signal="pressed" from="channel" to="." method="_on_channel_pressed"]
[connection signal="pressed" from="subway" to="." method="_on_subway_pressed"]
[connection signal="pressed" from="crash" to="." method="_on_crash_pressed"]
[connection signal="pressed" from="smile" to="." method="_on_smile_pressed"]
[connection signal="pressed" from="randomGames" to="." method="_on_random_games_pressed"]
[connection signal="pressed" from="storyButt" to="." method="_on_story_butt_pressed"]
